--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -36,7 +36,7 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 			
             	<ul>04:30 -  	High Tea</ul>           	
 
-            	<ul>06:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
+            	<ul>06:00 -  <span id="tab">Chat with Chaat, Introduction to "The Team" (tea and snacks at hackerspace)</span></ul>
 
             	<ul>06:30 -  <span id="tab"><strong>Lightning Talks</strong></span></ul>
 
