Refactor: Initial stages of responsive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="site-section site-hero">
       <!-- Separator Animation -->
-      <svg version="1.1" class="circuit-no-fill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="right0"
+      <svg version="1.1" class="circuit-no-fill d-none d-lg-block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="right0"
         viewBox="0 0 96.3 457.3" style="enable-background:new 0 0 96.3 457.3;" xml:space="preserve">
         <g id="circuit-left" transform="translate(92.128906, 524.812500)">
           <path class="st0" d="M-49.2-434.4c0,2.3,1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1c0-1.8-1.2-3.3-2.8-3.9v-24.2l-13.8-13.8v-23
@@ -97,7 +97,7 @@
       </div>
 
       <!-- Separator Animation -->
-      <svg version="1.1" class="circuit-no-fill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="hero-section-right-90"
+      <svg version="1.1" class="circuit-no-fill d-none d-lg-block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="hero-section-right-90"
         viewBox="0 0 96.3 457.3" xml:space="preserve">
         <g id="circuit-left" transform="translate(92.128906, 524.812500)">
           <path class="st0" d="M-49.2-434.4c0,2.3,1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1c0-1.8-1.2-3.3-2.8-3.9v-24.2l-13.8-13.8v-23
@@ -132,7 +132,7 @@
 
     <div class="site-section">
       <!-- Separator Animation -->
-      <svg version="1.1" class="circuit-no-fill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="section-right-90"
+      <svg version="1.1" class="circuit-no-fill d-none d-lg-block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="section-right-90"
         viewBox="0 0 96.3 457.3" xml:space="preserve">
         <g id="circuit-left" transform="translate(92.128906, 524.812500)">
           <path class="st0" d="M-49.2-434.4c0,2.3,1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1c0-1.8-1.2-3.3-2.8-3.9v-24.2l-13.8-13.8v-23
@@ -258,7 +258,7 @@
     
     <div class="site-section">
       <!-- Separator Animation -->
-      <svg version="1.1" class="circuit-no-fill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="section-left-90"
+      <svg version="1.1" class="circuit-no-fill d-none d-lg-block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="section-left-90"
         viewBox="0 0 96.3 457.3" xml:space="preserve">
         <g id="circuit-left" transform="translate(92.128906, 524.812500)">
           <path class="st0" d="M-49.2-434.4c0,2.3,1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1c0-1.8-1.2-3.3-2.8-3.9v-24.2l-13.8-13.8v-23
@@ -365,7 +365,7 @@
 
     <div class="site-section">
       <!-- Separator Animation -->
-      <svg version="1.1" class="circuit-no-fill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="section-right-90"
+      <svg version="1.1" class="circuit-no-fill d-none d-lg-block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" id="section-right-90"
         viewBox="0 0 96.3 457.3" xml:space="preserve">
         <g id="circuit-left" transform="translate(92.128906, 524.812500)">
           <path class="st0" d="M-49.2-434.4c0,2.3,1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1c0-1.8-1.2-3.3-2.8-3.9v-24.2l-13.8-13.8v-23
