--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <div class="container-fluid">
         <div class="row align-items-center">
           <div class="col-11 col-xl-2">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">Work<span class="text-primary">shop</span> </a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">SHD<span class="text-primary">India</span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -69,14 +69,28 @@
     <div class="site-section">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-lg-4 ">
+          <div class="col-lg-8 ">
             <div class="site-section-heading" data-aos="fade-up" data-aos-delay="100">
-              <h2>Welcome To Workshop</h2>
+              <h2>Who we are</h2>
             </div>
           </div>
-          <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio! Aperiam!</p>
-            <p>voluptatem nulla repellendus enim perspiciatis reiciendis iusto assumenda neque quaerat quidem architecto.</p>
+          <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
+            <p>SHD Belgaum isn’t an organization or a company - it's just a loose grassroot network pf passionate people who are curious and motivated about ideas about ideas and innovations that can bring a positive change the society. The organizing team consists wholly of volunteers from the world’s of science, art, design, computing, technology, architecture and the intersections between.</p>
+			<p>Our volunteers are from communitiesand orgs like <font color="red"> PyBelgaum</font>(Python Users Group), <font color="red">FossMatters</font>, <font color="red">Mhadei Research Center</font>, <font color="red">DGPLUG</font>, <font color="red">PyLadies</font>, <font color="red">ICFOSS</font>, <font color="red">Reserved Bit</font>, <font color="red">Python Pune</font> and <font color="red">Galileo Astronomy Club</font></p>
+
+			<p>Most of us belong to <font color="red">Makerspace Belgaum</font>.</p>
+			<p>
+			<a href=""><img src="images/msblogo.jpg" alt="Makerspace Belgaum" ></a>
+			</p>
+
+			<p>A creative learning centre which enables immersive and experiential learning.  In the makerspace visitors are invited to explore a curiosity-driven exhibit, chat with a featured artist, or investigate a range of phenomena with artists, scientists, educators, and others by participating in a collaborative activity. Makerspace also makes available all the tools for kids to facilitate learning by exploring and experimenting.</p>
+    
+     
+			<p>Sankalp Bhoomi is our organizing partner.</p>
+			<p>
+			<a href="http://sankalphospitality.in" target="_blank" ><img src="images/sankalpbhoomi.jpg" alt="Sankalpbhoomi"></a>
+			</P> 
+			<p><font color="red">Sankalpbhoomi</font> -The farm resort, totally in tune with nature in its rustic	uncorrupted state, stands testimony to	saving nature. It was once an abandoned 	quarry, today	natures 	glory restored. The resort resembles an enchanting oasis, with a thick set of trees, sprawling lawns, and a large lagoon surrounded by picturesque expansive rock walls as backdrop. </p>
           </div>
         </div>
         <div class="row mb-5">
@@ -84,24 +98,7 @@
             <img src="images/hero_1.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><span class="text-primary">The Conference</span></div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex et rem ea, voluptatem harum autem reprehenderit dolor, asperiores voluptate, odio expedita modi quam eum suscipit, ut illum consequuntur atque. Nisi.</p>
-            <p>Cupiditate nostrum aliquam rem et, blanditiis iusto ipsa ab aspernatur tenetur ad! Dicta perspiciatis, laborum at natus hic nulla laboriosam, suscipit iusto quas animi, numquam sunt. Vel nemo aliquam asperiores.</p>
-            <p class="mb-5">Aspernatur sequi eum debitis illum inventore. Labore libero, minus tenetur, mollitia eaque officiis molestiae necessitatibus fugit at architecto eum recusandae nam, saepe aspernatur unde alias tempora ipsum. Neque, delectus tenetur.</p>
-
-            <div class="d-flex coordinator align-items-center">
-              <div class="mr-4">
-                <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-              </div>
-              <span>By <span class="text-white">Luke Jones</span> <br> Conference Coordinator</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+       </div>
 
 
     <div class="site-section">
