--- a/coc.html
+++ b/coc.html
@@ -40,12 +40,27 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About Us</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="#">Projects</a></li>  
+                <li><a href="#">Projects</a></li>         
+                <li><a href="#">Python</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">schedule</a></li>
+                <li><a href="#">Sponsor Us</a></li>
+                <li><a href="coc.html">COC</a></li>
+                <li><a href="news.html">Blog</a></li>
+                <li><a href="#">Global SHD</a></li>
+                <li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Previous SHD
+					<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+					<li><a href="https://sciencehackdayindia.github.io/2018/" target="_blank">SHD 2018</a></li>
+					<li><a href="sciencehackday.in/2017/index.html" target="_blank">SHD 2017</a></li>
+					<li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
+					</ul>
+				</li>
+                <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>                
               </ul>
             </nav>
           </div>
@@ -158,8 +173,8 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
+            <h2 class="footer-heading text-uppercase mb-4">SHD India</h2>
+            <p>Let's collaborate, learn, hack, build cool stuff with science and have lots of fun...</p>
           </div>
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
