embeding SHD Video

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 			<br>
 			<h3>How to reach? </h3>
 			<h5><font color="red">By Road</font></h5>
-                <p>Belagavi / Belgaum is directly accessible via National Highway 4. Belgaum is located 500 Kms from Mumbai, 500 Kms from Bangalore, 300 Kms from Pune and 550 Kms to Hyderabad. There are over night buses available from any of these cities and are very comfortable to travel in. The buses depart post 8 PM from all the above cities are arrive in Belgaum between 6 and 8 AM which is ideal to attend Science Hack Day.</p>
-                <p>You can also take this opportunity to have a road trip since the path to Belgaum from anywhere has cities along the way. Goa is 150 Kms away from Belgaum and takes 2-3 hours by road.</br></br>
+                <p>Belagavi / Belgaum is directly accessible via National Highway 4. Belgaum is located 500 Kms from Mumbai, 500 Kms from Bangalore, 300 Kms from Pune and 550 Kms to Hyderabad. There are over night buses available from any of these cities and are very comfortable to travel in. </p>
+                <p>You can also take this opportunity to have a road trip since the path to Belgaum from anywhere has cities along the way. Goa is about 130 Kms away from Belgaum and takes 2-3 hours by road.</br></br>
             <h5><font color="red">By Train</font></h5>                        
                 <p>Belgaum Railway station has the code BGM. There are over night trains from Bangalore and Mumbai.</p>
                 
