--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SHD India 2019 &mdash; Science Hack Day India</title>
+    <title>Science Hack Day India 2019; About Us</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/electronics-animation.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -272,12 +272,12 @@
     
 	<div class="container">
         <div class="row mb-5">
-          <div class="col-lg-4 ">
+          <div class="col-lg-12 ">
             <div class="site-section-heading" data-aos="fade-up">
               <h2>Community Partners </h2>
             </div>
           </div>
-          <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
             <p>Amazing People/Organizations helping us to make SHD India happen</p>
           </div>
         </div>
