--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Science Hack Day India 2019; About Us</title>
+    <title>SHD India 2019 &mdash; Science Hack Day India</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="css/electronics-animation.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/electronics-animation.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -51,7 +50,7 @@
                 <li><a href="#">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>
-                <li><a href="#">Global SHD</a></li>
+                <li><a href="http://sciencehackday.org/">Global SHD</a></li>
                 <li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Previous SHD
 					<span class="caret"></span></a>
