--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@
 			<p>Here&#8217;s a video from SHD San Fransisco that shows what the event is like:</p>       
 
 			<p style="text-align: center"><span style="color: #000000"><iframe  id="_ytid_98414" width="100%" height="100%" src="//www.youtube.com/embed/Dzb_QCYxi3I?enablejsapi=1&autoplay=0&cc_load_policy=0&iv_load_policy=1&loop=0&modestbranding=0&rel=1&showinfo=1&playsinline=0&autohide=2&theme=dark&color=red&wmode=opaque&vq=&controls=2&" frameborder="0" class="__youtube_prefs__" allowfullscreen ></iframe></span></p>
+		  <p> </p>
+			<p style="position: relative; padding: 30px 0px 57% 0px; height: 0; overflow: hidden;"><iframe src="//www.youtube.com/embed/Dzb_QCYxi3I?enablejsapi=1&autoplay=0&cc_load_policy=0&iv_load_policy=1&loop=0&modestbranding=0&rel=1&showinfo=1&playsinline=0&autohide=2&theme=dark&color=red&wmode=opaque&vq=&controls=2&" width="100%" height="100%" frameborder="0" style="display: block; margin: 0px auto; position: absolute; top: 0; left: 0;"></iframe></p>
+			<p> </p>
 		  <br>
+		  
 		  <p>Magical Moments - Glimpses of Science Hack Day India 2018. There is something for everyone .... !</p>  
 		  <p style="text-align: center"><span style="color: #000000"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/2xLOCQJ4R28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 		</div>
