Make youtube embeds responsive

--- a/index.html
+++ b/index.html
@@ -41,25 +41,23 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="#">Projects</a></li>  
-                <li><a href="#">Projects</a></li>         
-                <li><a href="#">Python</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Project</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">schedule</a></li>
-                <li><a href="#">Sponsor Us</a></li>
+                <li><a href="#">Schedule</a></li>
+                <li><a href="#">Sponsor</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>
-                <li><a href="http://sciencehackday.org/">Global SHD</a></li>
+                <li><a href="http://sciencehackday.org/">Global</a></li>
                 <li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Previous SHD
-					<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-					<li><a href="https://sciencehackdayindia.github.io/2018/" target="_blank">SHD 2018</a></li>
-					<li><a href="sciencehackday.in/2017/index.html" target="_blank">SHD 2017</a></li>
-					<li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
-					</ul>
-				</li>
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                  <li><a href="https://sciencehackdayindia.github.io/2018/" target="_blank">SHD 2018</a></li>
+                  <li><a href="sciencehackday.in/2017/index.html" target="_blank">SHD 2017</a></li>
+                  <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
+                  </ul>
+                </li>
                 <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>                
               </ul>
             </nav>
@@ -188,10 +186,12 @@
 			<br>The mission of Science Hack Day is simply to get excited and make things with science! People organically form multidisciplinary teams over the course of a weekend: particle physicists team up with designers, marketers join forces with open source rocket scientists, writers collaborate with molecular biologists, and developers partner with school kids. By collaborating on focused tasks during this short period, small groups of hackers are capable of producing remarkable results. To date, there have been over 60 Science Hack Day events across 22 countries around the globe and more are being planned which are listed on the <a href="http://sciencehackday.org/" target="blank">Global SHD site</a>.</p>
 			<p>Here&#8217;s a video from SHD San Fransisco that shows what the event is like:</p>       
 
-			<p style="text-align: center"><span style="color: #000000"><iframe  id="_ytid_98414" width="750" height="450" src="//www.youtube.com/embed/Dzb_QCYxi3I?enablejsapi=1&autoplay=0&cc_load_policy=0&iv_load_policy=1&loop=0&modestbranding=0&rel=1&showinfo=1&playsinline=0&autohide=2&theme=dark&color=red&wmode=opaque&vq=&controls=2&" frameborder="0" class="__youtube_prefs__" allowfullscreen ></iframe></span></p>
+      <p style="text-align: center"><span style="color: #000000">
+        <iframe class="video-frames" id="_ytid_98414" width="750" height="450" src="//www.youtube.com/embed/Dzb_QCYxi3I?enablejsapi=1&autoplay=0&cc_load_policy=0&iv_load_policy=1&loop=0&modestbranding=0&rel=1&showinfo=1&playsinline=0&autohide=2&theme=dark&color=red&wmode=opaque&vq=&controls=2&" frameborder="0" class="__youtube_prefs__" allowfullscreen ></iframe></span></p>
 		  <br>
 		  <p>Magical Moments - Glimpses of Science Hack Day India 2018. There is something for everyone .... !</p>  
-		  <p style="text-align: center"><span style="color: #000000"><iframe width="750" height="450" src="https://www.youtube.com/embed/2xLOCQJ4R28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+      <p style="text-align: center"><span style="color: #000000">
+        <iframe class="video-frames" width="750" height="450" src="https://www.youtube.com/embed/2xLOCQJ4R28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 		</div>
 		  <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
 		  	  
