--- a/news.html
+++ b/news.html
@@ -41,11 +41,24 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
-                <li class="active"><a href="news.html">News</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Schedule</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="coc.html">COC</a></li>
+                <li class="active"><a href="news.html">Blog</a></li>
+                <li><a href="http://sciencehackday.org/">Global</a></li>
+                <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                  <li><a href="https://sciencehackdayindia.github.io/2018/" target="_blank">SHD 2018</a></li>
+                  <li><a href="sciencehackday.in/2017/index.html" target="_blank">SHD 2017</a></li>
+                  <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
+                  </ul>
+                </li>
+                <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>                
               </ul>
             </nav>
           </div>
