python.html added

--- a/about.html
+++ b/about.html
@@ -40,15 +40,16 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About</a></li>
-                <li><a href="#">Project</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>                
+                <li><a href="python.html">Python</a></li>
+                <li><a href="#">Workshops</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Schedule</a></li>
-                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
-                <li><a href="news.html">Blog</a></li>
-                <li><a href="http://sciencehackday.org/">Global</a></li>
+                <li><a href="news.html">Blog</a></li>                
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
                   <span class="caret"></span></a>
@@ -88,7 +89,7 @@
             </div>
           </div>
           <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <p>SHD Belgaum isn’t an organization or a company - it's just a loose grassroot network pf passionate people who are curious and motivated about ideas about ideas and innovations that can bring a positive change the society. The organizing team consists wholly of volunteers from the world’s of science, art, design, computing, technology, architecture and the intersections between.</p>
+            <p>SHD Belgaum isn’t an organization or a company - it's just a loose grassroot network pf passionate people who are curious and motivated about ideas and innovations that can bring a positive change the society. The organizing team consists wholly of volunteers from the world’s of science, art, design, computing, technology, architecture and the intersections between.</p>
 			<p>Our volunteers are from communitiesand orgs like <font color="red"> PyBelgaum</font>(Python Users Group), <font color="red">FossMatters</font>, <font color="red">Mhadei Research Center</font>, <font color="red">DGPLUG</font>, <font color="red">PyLadies</font>, <font color="red">ICFOSS</font>, <font color="red">Reserved Bit</font>, <font color="red">Python Pune</font> and <font color="red">Galileo Astronomy Club</font></p>
 
 			<p>Most of us belong to <font color="red">Makerspace Belgaum</font>.</p>
