--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Project</a></li>
+                <li><a href="about.html">About</a></li>                
+                <li><a href="python.html">Python</a></li>
+                <li><a href="#">Workshops</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Schedule</a></li>
-                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
-                <li><a href="news.html">Blog</a></li>
-                <li><a href="http://sciencehackday.org/">Global</a></li>
+                <li><a href="news.html">Blog</a></li>                
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
                   <span class="caret"></span></a>
