index.html updated

--- a/python.html
+++ b/python.html
@@ -79,7 +79,7 @@
           </div>
           <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
 			  <h4>This is the main theme at Science Hack Day India.</h4>
-			  <p>SHD is NOT just another Hackathon. Its an unconference style event full of activities for all age groups. It is fully packed with hands-on workshops like Science Toys and Soldering, Talks, Lightning Talks, Science Demos, Python programming workshops, Hacking Activities, Architectural constructions, High altitude baloon launching, Science Show, Laser Show, Fun Games with Science and many more...</p>
+			  <p>SHD is NOT just another Hackathon. It is an unconference style event full of activities for all age groups. It is fully packed with hands-on workshops like Science Toys and Soldering, Talks, Lightning Talks, Science Demos, Python programming workshops, Hacking Activities, Architectural constructions, High altitude baloon launching, Science Show, Laser Show, Fun Games with Science and many more...</p>
 			  <p>At SHD India, we believe that Python programing language can change the way we learn and teach science. We will be experimenting with Python powered open source science lab tools like <a href="http://expeyes.in/" target="_blank">ExpEYES </a> (Python Powered Science Lab),<a href="https://csparkresearch.in/seelablet/seelablet.html" target="_blank">SEELablet </a> (Python Powered Instrumentation Cluster)  and <a href="http://expeyes.in/kuttypy/index.html" target="_blank">KuttyPy </a> (Connect to the outside world using Python -Microcontroller training utility).</P>
 			   
 			  <h3>Python Workshops</h3>
