--- a/index.html
+++ b/index.html
@@ -222,24 +222,33 @@
             <h3><font color="#D6D0F4">There is something for everyone </font> </h3>     
             
                <ul>
-				<li>For School Kids (Age Group 5-12 years)</li>
+				<li><font color="red">For School Kids (Age Group 5-12 years)</font></li>
 				<ul><li>Science Demos, Aero-show, Drones, Fun Games, Rocket Launching, Hands-on Science and maths activities, Paper Circuits, 3D Pens etc.. </li></ul>
 				<p> </p>
-				<li>For Young Scientists (5th to 12th std)</li>
+				<li><font color="red">For Young Scientists (5th to 12th std)</font></li>
 				<ul>Hands on workshops
 					<li> Science toys (Faraday Box - Fun with Electromagnetism)</li>
-					<li> Soldering - learn soldering and make a cool SHD PCB badge </li>
-					<li> Affordable Paper Microscope - Magnify your curiosity </li>
+					<li> Electronics and Soldering - learn basics of electronics with a cool SHD Electronics Box </li>
+					<li> Science and maths demos, Informative sessions, 3D Printing etc </li>
 					</ul>
 				<p> </p>
-				<li>For BSc and Engineering Students and Physics/Electronics Teachers</li>
+				<li><font color="red">For BSc and Engineering Students and Physics/Electronics Teachers</font></li>
 				<ul>Hands on workshops
 					<li> Python 101 - Learn Python programming language basics </li>
 					<li> Python for Young Engineers and Scientists - with <a href="http://expeyes.in/" target="_blank">ExpEYES </a>An Open Source Science Lab </li>
 					<li><a href="http://expeyes.in/kuttypy/index.html" target="_blank">KuttyPy </a> Connect to the outside world using Python -Microcontrollers for beginners</li>
 				</ul>
 				<p> </p>
-				<li>For Science Lovers and Hackers - PUC/UG/PG Students, Teachers, Engineers, Artists, Architects or any one with curiosity. Participate as a</li>
+				<li><font color="red">For Highschool/Pre-University Teams </font></li>
+				<ul>Competitive events leading to  SHD India Jr Hackers Championship Award 
+					<li> Capture the flag  </li>
+					<li> STEAM Games </li>
+					<li> Science Demo </li>
+					<li> SHD India Challenge.</li>
+				</ul>
+				<ul>Note: To be a part of this competition each students must buy either workshop ticket or hackers ticket.</ul> 
+				<p> </p>
+				<li><font color="red">For Science Lovers and Hackers</font> - PUC/UG/PG Students, Teachers, Engineers, Artists, Architects or any one with curiosity. Participate as a</li>
 				<ul>
 					<li> Volunteer - Be SHD ambassadors, help hackers and actively engage young kids in various activities</li>
 					<li> Mentor - Help us conduct workshops or Propose your own hack idea and bring it to reality with a curious team of hackers</li>
@@ -251,7 +260,8 @@
 						<li>Python Powered Laser Show -Superimposing music and laser light</li>
 						<li>Chladni patterns and Lissajous Figures</li>
 						<li>Launching high altitude baloons</li>
-						<li>Puzzles, CTF, Art and Architectural Installations </li>
+						<li>Puzzles,Art and Architectural Installations </li>
+						<lu>CTF - Capture the Flag competition</lu>
 						<li>Stargazing</li>
 						<p>And many more...</p>
 					</ul>
