index file modified

--- a/about.html
+++ b/about.html
@@ -212,49 +212,33 @@
           </div>
         </div>
 
-
-
         
-
-      </div>
-    </div>
 
     <div class="site-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-4 ">
             <div class="site-section-heading" data-aos="fade-up">
-              <h2>Sponsors</h2>
+              <h2 id="c1">Contact Us</h2>
             </div>
           </div>
-          <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.</p>
-          </div>
+         <div class="col-lg-8 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
+            <h3>Email</h3>
+            <ul><ul><p>shdbelgaum@gmail.com </p></ul></ul>
+            <h3>Contact Numbers</h3>
+            <ul>
+				<ul>
+						<li>Praveen Patil 9482543803 </li>
+						<li>Rahul Khanolkar 9986689985 </li>
+						<li>Gautam Samant 9845470292</li>
+						<li>Rupa Ghadi 9449308975</li>
+						<li>Anuja Chavan 9741081667</li>
+						</ul>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-            <img src="images/logo_1.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
-            <img src="images/logo_2.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="400">
-            <img src="images/logo_3.png" alt="Image" class="img-fluid">
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="500">
-            <img src="images/logo_4.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="600">
-            <img src="images/logo_5.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="700">
-            <img src="images/logo_6.png" alt="Image" class="img-fluid">
-          </div>
-
-        </div>
+       </div>
       </div>
-    </div>
+     </div>
+
 
 
     
