--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="#">Workshops</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Schedule</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="#">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>                
@@ -402,24 +402,26 @@
           <div class="col-md-4">
             <h2 class="footer-heading text-uppercase mb-4">SHD India</h2>
             <p>Let's collaborate, learn, hack, build cool stuff with science and have lots of fun...</p>
+            
           </div>
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Speakers</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="http://tiny.cc/rjgxdz" target="_blank" >Event Reports</a></li>
+              <li><a href="#">Schedule</a></li>
+              <li><a href="#">Workshops</a></li>
+              <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-md-4">
             <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
             <p>
-              <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-              <a href="#" class="p-2"><span class="icon-twitter"></span></a>
+              <a href="https://www.facebook.com/sciencehackin/" target="_blank" class="p-2 pl-0"><span class="icon-facebook"></span></a>
+              <a href="https://twitter.com/SHD_India" target="_blank" class="p-2"><span class="icon-twitter"></span></a>
               <a href="#" class="p-2"><span class="icon-youtube"></span></a>
-              <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+              <a href="https://www.instagram.com/shdindia/" target="_blank" class="p-2"><span class="icon-instagram"></span></a>
             </p>
+            <p>shdbelgaum@gmail.com</p>
           </div>
         </div>
         <div class="row">
