menu and footer updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>                
                 <li><a href="python.html">Python</a></li>
-                <li><a href="#">Workshops</a></li>
+                <li><a href="workshops.html">Workshops</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
@@ -408,8 +408,8 @@
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
             <ul class="list-unstyled">
               <li><a href="http://tiny.cc/rjgxdz" target="_blank" >Event Reports</a></li>
-              <li><a href="#">Schedule</a></li>
-              <li><a href="#">Workshops</a></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li><a href="workshops.html">Workshops</a></li>
               <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>
             </ul>
           </div>
@@ -418,7 +418,7 @@
             <p>
               <a href="https://www.facebook.com/sciencehackin/" target="_blank" class="p-2 pl-0"><span class="icon-facebook"></span></a>
               <a href="https://twitter.com/SHD_India" target="_blank" class="p-2"><span class="icon-twitter"></span></a>
-              <a href="#" class="p-2"><span class="icon-youtube"></span></a>
+              <!-- <a href="#" class="p-2"><span class="icon-youtube"></span></a>-->
               <a href="https://www.instagram.com/shdindia/" target="_blank" class="p-2"><span class="icon-instagram"></span></a>
             </p>
             <p>shdbelgaum@gmail.com</p>
