--- a/python.html
+++ b/python.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Science Hack Day India 2019; About Us</title>
+    <title>Python; Science Hack Day India 2019</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
