added ticket links

--- a/coc.html
+++ b/coc.html
@@ -44,10 +44,10 @@
                 <li><a href="about.html">About</a></li>                
                 <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="galary.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="#">Sponsor Us</a></li>
+                <li><a href="sponsor.html">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>                
                 <li class="dropdown">
@@ -59,7 +59,7 @@
                   <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
                   </ul>
                 </li>
-                <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>                 
+                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>                  
               </ul>
             </nav>
           </div>
