--- a/python.html
+++ b/python.html
@@ -40,14 +40,14 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
+                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>                
                 <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="galary.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="#">Sponsor Us</a></li>
+                <li><a href="sponsor.html">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>                
                 <li class="dropdown">
@@ -59,7 +59,7 @@
                   <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
                   </ul>
                 </li>
-                <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>                 
+                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>                   
               </ul>
             </nav>
           </div>
@@ -91,6 +91,7 @@
 				<li>KuttyPy - Connect to the outside world using Python</li>
 				<p>Hands-on workshop - Microcontroller training for beginners </p>
 				</ul> 
+				 <p>To attend these workshops please book a single ticket and  <a href="https://www.instamojo.com/shdindia/python-workshops-for-young-scientists-and-en/" target="_blank" class="btn btn-secondary px-3 py-1" > Register Here </a></p>
 			 <h3>Python based activities</h3>
 			   <ul>
 				<li>Science Fun with sensors and transducers</li>
