--- a/workshops.html
+++ b/workshops.html
@@ -44,10 +44,10 @@
                 <li><a href="about.html">About</a></li>                
                 <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="galary.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="#">Sponsor Us</a></li>
+                <li><a href="sponsor.html">Sponsor Us</a></li>
                 <li><a href="coc.html">COC</a></li>
                 <li><a href="news.html">Blog</a></li>                
                 <li class="dropdown">
@@ -59,7 +59,7 @@
                   <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
                   </ul>
                 </li>
-                <li class="cta"><a href="https://www.instamojo.com/shdindia/">Buy Tickets</a></li>                
+                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>                  
               </ul>               
               </ul>
             </nav>
@@ -80,7 +80,7 @@
           </div>
           <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
             
-              <p>There will be 3 Python based workshops at SHD India 2019. To attend any one or all three please book a single ticket HERE.</p>
+              <p>There will be 3 Python based workshops at SHD India 2019. To attend any one or all three please book a single ticket and  <a href="https://www.instamojo.com/shdindia/python-workshops-for-young-scientists-and-en/" target="_blank" class="btn btn-secondary px-3 py-1" > Register Here </a></p>
               <h5><font color="red">Suitable For</font></h5>	
 				<p>Beginner coders, Pre-university Science, Bsc and Engineering students and Physics and Electronics Teachers OR anyone with curios mind and passion to learn new things.</p>
           </div>  
@@ -148,7 +148,7 @@
           </div>
           <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
             
-              <p>There will be 2 Science Toys workshops at SHD India 2019. To attend these workshops please book a single ticket HERE.</p>
+              <p>There will be 2 Science Toys workshops at SHD India 2019. To attend these workshops please book a single ticket and  <a href="https://www.instamojo.com/shdindia/science-toys-and-basic-electronics/" target="_blank" class="btn btn-secondary px-3 py-1" > Register Here </a>.</p>
              <h5><font color="red">Suitable For</font></h5>	
 				<p>High school students (5th to 12th standard) </p>
           </div>  
