Adding CTF information for SHD 2019

--- a/buy-tickets.html
+++ b/buy-tickets.html
@@ -44,6 +44,7 @@
                 <li><a href="about.html">About</a></li>                
                 <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
+<li><a href="ctf.html">Capture the Flag (CTF)</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="galary.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
@@ -264,6 +265,7 @@
               <li><a href="http://tiny.cc/rjgxdz" target="_blank" >Event Reports</a></li>
               <li><a href="schedule.html">Schedule</a></li>
               <li><a href="workshops.html">Workshops</a></li>
+<li><a href="ctf.html">Capture the Flag (CTF)</a></li>
               <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>
             </ul>
           </div>
