--- a/buy-tickets.html
+++ b/buy-tickets.html
@@ -103,14 +103,14 @@
 
           <div class="col-md-6 col-lg-6 mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="pricing border-primary text-center">
-              <h2>Python Workshops</h2>
-              <div class="amount"><sup>Rs</sup><span class="number">1500</span> </div>
+              <h2>Python and Microcontroller Workshops</h2>
+              <div class="amount"><sup>Rs</sup><span class="number">1200</span> </div>
               <ul class="list-unstyled mb-5">
                 <li>19-20 October</li>
                 <li><font color="red">For BSc and Engineering Students, Physics and Electronics Teachers</font></li>
                 
-                <li>3 Workshops</li>
-                <li>Python 101, ExpEYES, KuttyPy</li>
+                <li>2 Workshops</li>
+                <li>Python 101, KuttyPy</li>
                 <li>KuttyPy kit with sensors</li>
                 <li>SHD India T Shirt</li>
                 <li>Free Lunch and Snacks</li>
